# ai-chan-discord-bot

./: .gitignore  Cargo.toml
src/: commands.rs  main.rs  reminders.rs  soliloquy.rs
src/commands/: myreminders.rs  remindme.rs  selfmute.rs  threadpin.rs
